using System.Linq.Expressions;
using Microsoft.EntityFrameworkCore;

namespace KPCOS.DataAccessLayer.Repositories;

public interface IRepository<T> where T : class
{
    DbSet<T?> Entities { get; }
    DbContext DbContext { get; }

    #region Sync

    public IQueryable<T?> Get();
    public IEnumerable<T> Get(
        Expression<Func<T, bool>> filter = null,
        Func<IQueryable<T>, IOrderedQueryable<T>> orderBy = null,
        string includeProperties = "",
        int? pageIndex = null,
        int? pageSize = null);

    public (IEnumerable<T> Data, int Count) GetWithCount(
        Expression<Func<T, bool>> filter = null,
        Func<IQueryable<T>, IOrderedQueryable<T>> orderBy = null,
        string includeProperties = "",
        int? pageIndex = null,
        int? pageSize = null);
    public IQueryable<T> GetPagingQueryable(int pageNumber, int pageSize);
    public IQueryable<T?> Where(Expression<Func<T?, bool>> predic = null);
    public void Add(T? entity);
    public void Update(T? entity);
    public int Count();
    public int SaveChanges();
    public T? FirstOrDefault(Expression<Func<T?, bool>> predicate = null);
    public T? SingleOrDefault(Expression<Func<T?, bool>> predicate = null);
    public T? Find(params object?[]? keyValues);
    
    /// <summary>
    /// This function is used to remove list entity from database, no auto save
    /// </summary>
    /// <param name="entities"></param>
    public void RemoveRange(List<T> entities);

    #endregion

    #region Async

    /// <summary>
    ///     unsafe to use, ill
    /// </summary>
    /// <returns>Task<IQueryable<T>></returns>
    public Task AddAsync(T? entity, bool saveChanges = true);
    public Task AddRangeAsync(List<T> entities, bool saveChanges = true);
    public Task UpdateAsync(T? entity, bool saveChanges = true);
    public Task RemoveAsync(T? entity, bool saveChanges = true);
    public Task<T?> FirstOrDefaultAsync(Expression<Func<T?, bool>> predicate = null);
    
    public Task<T?> SingleOrDefaultAsync(Expression<Func<T?, bool>> predicate = null);
    
    /// <summary>
    /// use when know primary key
    /// </summary>
    /// <param name="keyValues">id</param>
    /// <returns>entity?</returns>
    public Task<T?> FindAsync(params object?[]? keyValues);
    public Task<int> SaveAsync();

    #endregion
}